--- a/app/views/meeseeks/index.html.erb
+++ b/app/views/meeseeks/index.html.erb
@@ -31,3 +31,23 @@
 <br>
 
 <%= link_to 'New Meeseek', new_meeseek_path %>
+
+<div class="meeseek-finder">
+  <h1>Meeseek Finder</h1>
+  <%= form_tag meeseeks_path, :method => :get do %>
+  <p>
+    <%= text_field_tag :search, params[:search], :id => 'geo-input' %>
+    <%= submit_tag "Search Near", :name => nil %>
+  </p>
+  <% end %>
+  <h3>Nearby Meeseeks</h3>
+  <% @meeseeks.each do |meeseek| %>
+  <p>
+    <div class="each-meeseek">
+      <%= meeseek.name %><br>
+      <%= meeseek.address %><br>
+      <%= meeseek.distance.round(2) %> miles
+    </div>
+  </p>
+  <% end %>
+</div>
