--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -20,6 +20,9 @@ pre {
 
 a {
   color: #000;
+  text-decoration: none;
+  font-family: 'Brandon';
+  // display: block;
 
   &:visited {
     color: #666;
