--- a/app/views/meeseeks/index.html.erb
+++ b/app/views/meeseeks/index.html.erb
@@ -1,37 +1,5 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Meeseeks</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Address</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @meeseeks.each do |meeseek| %>
-      <tr>
-        <td><%= meeseek.name %></td>
-        <td><%= meeseek.address %></td>
-        <td><%= meeseek.latitude %></td>
-        <td><%= meeseek.longitude %></td>
-        <td><%= link_to 'Show', meeseek %></td>
-        <td><%= link_to 'Edit', edit_meeseek_path(meeseek) %></td>
-        <td><%= link_to 'Destroy', meeseek, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Meeseek', new_meeseek_path %>
-
 <div class="meeseek-finder">
   <h1>Meeseek Finder</h1>
   <%= form_tag meeseeks_path, :method => :get do %>
@@ -50,3 +18,31 @@
   </p>
   <% end %>
 </div>
+
+<h1>List of Meeseeks</h1>
+
+<%= link_to 'New Meeseek', new_meeseek_path %>
+
+<br><br>
+
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Address</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @meeseeks.each do |meeseek| %>
+      <tr>
+        <td><%= meeseek.name %></td>
+        <td><%= meeseek.address %></td>
+        <td><%= link_to 'View', meeseek %></td>
+        <td><%= link_to 'Edit', edit_meeseek_path(meeseek) %></td>
+        <td><%= link_to 'Delete', meeseek, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
