--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,5 +12,9 @@
 
 <%= yield %>
 
+
+<!-- <script async defer
+  src="https://maps.googleapis.com/maps/api/js?&callback=initMap">
+</script> -->
 </body>
 </html>
