adding readme file and changing name to Meeseeker

--- a/app/views/meeseeks/index.html.erb
+++ b/app/views/meeseeks/index.html.erb
@@ -6,7 +6,7 @@
 
 
 <div class="meeseek-finder">
-  <h1>Meeseek Finder</h1>
+  <h1>Meeseeker</h1>
   <%= form_tag meeseeks_path, :method => :get do %>
   <p>
     <%= text_field_tag :search, params[:search], :id => 'geo-input' %>
