adding nav and footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,11 @@
   <script src="jquery.geocomplete.js"></script>
 </head>
 <body>
+  <nav>
+    <h1>Meeseeker</h1>
+  </nav>
 
 <%= yield %>
-
 
 <!-- <script async defer
   src="https://maps.googleapis.com/maps/api/js?&callback=initMap">
