--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,21 +14,31 @@
  *= require_self
  */
 
-#map {
-  width: 100%;
-  height: 400px;
-}
-
 @font-face {
   font-family: 'Brandon';
   src: url('/font/Brandon_med.otf');
 }
 
 html, body {
-  margin: 0;
+  margin: 30px 0 0 0;
   padding: 0;
   font-family: 'Brandon';
   text-align: center;
+}
+
+nav {
+  background: #00B0FF;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  z-index: 100;
+}
+
+nav h1 {
+  color: white;
+  line-height: 0;
 }
 
 table {
@@ -46,4 +56,27 @@ h1 {
 
 h3 {
   text-transform: uppercase;
+}
+
+footer {
+  width: 100%;
+  background: #00B0FF;
+  padding: 10px;
+  color: white;
+  margin-top: 30px;
+}
+
+footer a {
+  font-family: 'Brandon';
+  font-style: normal;
+  color: #8BDAFC;
+}
+
+footer a:hover {
+  color: white;
+}
+
+#map {
+  width: 100%;
+  height: 400px;
 }
