--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,7 +27,7 @@ html, body {
 }
 
 nav {
-  background: #00B0FF;
+  background: #30CFFC;
   position: fixed;
   top: 0;
   width: 100%;
@@ -51,7 +51,7 @@ td {
 
 h1 {
   text-transform: uppercase;
-  color: #00B0FF;
+  color: #30CFFC;
 }
 
 h3 {
@@ -63,12 +63,12 @@ button[type="search"] {
   border-radius: 5px;
   font-size: 15px;
   background: transparent;
-  color: #00B0FF;
+  color: #30CFFC;
 }
 
 footer {
   width: 100%;
-  background: #00B0FF;
+  background: #30CFFC;
   padding: 10px;
   color: white;
   margin-top: 30px;
