adding linke to nav title

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 </head>
 <body>
   <nav>
-    <h1>Meeseeker</h1>
+    <a href="/"><h1>Meeseeker</h1></a>
   </nav>
 
 <%= yield %>
@@ -20,5 +20,6 @@
 <!-- <script async defer
   src="https://maps.googleapis.com/maps/api/js?&callback=initMap">
 </script> -->
+
 </body>
 </html>
