adding linke to nav title

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 </head>
 <body>
   <nav>
-    <a href="/"><h1>Meeseekerr</h1></a>
+    <a href="/"><h1>Meeseeker</h1></a>
   </nav>
 
 <%= yield %>
